[gd_scene format=3 uid="uid://2wqjdo2btjns"]

[ext_resource type="Script" uid="uid://rqju3368u0my" path="res://Skripts/Upgrade_PlayerEffects.gd" id="1_jnjmu"]
[ext_resource type="Texture2D" uid="uid://dwoop3fptj56y" path="res://Pics/Background.png" id="1_kwka1"]

[node name="Adding_Cards" type="Node2D" unique_id=1380721097]

[node name="Background" type="Sprite2D" parent="." unique_id=1723231640]
z_index = -10
texture = ExtResource("1_kwka1")
centered = false

[node name="Card" type="Node2D" parent="." unique_id=561863995]
script = ExtResource("1_jnjmu")

[node name="Health" type="RichTextLabel" parent="Card" unique_id=1452792584]
visible = false
offset_left = 73.0
offset_top = 400.0
offset_right = 519.0
offset_bottom = 555.0
theme_override_font_sizes/normal_font_size = 80
text = "Health OP"

[node name="Points" type="RichTextLabel" parent="Card" unique_id=1489367614]
offset_left = 1354.0
offset_top = 400.0
offset_right = 1874.0
offset_bottom = 555.0
theme_override_colors/default_color = Color(0, 0.89113486, 0.7962867, 1)
theme_override_font_sizes/normal_font_size = 100
text = "Points: 0"

[node name="Hearts" type="RichTextLabel" parent="Card" unique_id=714131681]
visible = false
offset_left = 130.0
offset_top = 536.0
offset_right = 502.0
offset_bottom = 691.0
theme_override_font_sizes/normal_font_size = 50
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="Card" unique_id=795017081]
offset_left = 550.0
offset_top = 50.0
offset_right = 1300.0
offset_bottom = 250.0
theme_override_colors/font_color = Color(0, 0.89113486, 0.7962867, 1)
theme_override_font_sizes/font_size = 50
text = "Increase Diamonds (4)"

[node name="Button2" type="Button" parent="Card" unique_id=606962802]
offset_left = 550.0
offset_top = 300.0
offset_right = 1300.0
offset_bottom = 499.99957
theme_override_colors/font_color = Color(0, 0.89113486, 0.7962867, 1)
theme_override_font_sizes/font_size = 50
text = "Draw 1 more Card at Start (3)"

[node name="Button3" type="Button" parent="Card" unique_id=325381450]
offset_left = 550.0
offset_top = 550.0
offset_right = 1300.0
offset_bottom = 750.0
theme_override_colors/font_color = Color(0, 0.89113486, 0.7962867, 1)
theme_override_font_sizes/font_size = 50
text = "Add Body Part (2)"

[node name="Button4" type="Button" parent="Card" unique_id=236008630]
offset_left = 550.0
offset_top = 800.0
offset_right = 1300.0
offset_bottom = 1000.0
theme_override_colors/font_color = Color(0, 0.89113486, 0.7962867, 1)
theme_override_font_sizes/font_size = 50
text = "First Turn Immunity (3)"

[node name="Button5" type="Button" parent="Card" unique_id=423073069]
offset_left = 50.0
offset_top = 200.0
offset_right = 530.0
offset_bottom = 400.0
theme_override_colors/font_color = Color(0, 0.89113486, 0.7962867, 1)
theme_override_font_sizes/font_size = 50
text = "Random Card
Scaling (2)"

[node name="Button6" type="Button" parent="Card" unique_id=1870222894]
offset_left = 50.0
offset_top = 450.0
offset_right = 530.0
offset_bottom = 650.0
theme_override_colors/font_color = Color(0, 0.89113486, 0.7962867, 1)
theme_override_font_sizes/font_size = 50
text = "50% for 4 Points (2)"

[node name="Button7" type="Button" parent="Card" unique_id=1376233002]
offset_left = 50.0
offset_top = 700.0
offset_right = 530.0
offset_bottom = 900.0
theme_override_colors/font_color = Color(0, 0.89113486, 0.7962867, 1)
theme_override_font_sizes/font_size = 50
text = "Add
Bigfoot (5)"

[node name="Button" type="Button" parent="." unique_id=703293873]
offset_left = 1363.0
offset_top = 665.0
offset_right = 1831.0
offset_bottom = 866.0
theme_override_colors/font_color = Color(0, 0.89113486, 0.7962867, 1)
theme_override_font_sizes/font_size = 40
text = "Continue (keep points)"
text_overrun_behavior = 2

[connection signal="pressed" from="Card/Button1" to="Card" method="Button1"]
[connection signal="pressed" from="Card/Button2" to="Card" method="Button2"]
[connection signal="pressed" from="Card/Button3" to="Card" method="Button3"]
[connection signal="pressed" from="Card/Button4" to="Card" method="Button4"]
[connection signal="pressed" from="Card/Button5" to="Card" method="Button5"]
[connection signal="pressed" from="Card/Button6" to="Card" method="Button6"]
[connection signal="pressed" from="Card/Button7" to="Card" method="Button7"]
[connection signal="pressed" from="Button" to="Card" method="Continue_Button"]
